overall fixes to some classes